--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,17 +53,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     /// newly added
-
     implementation("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
-
     implementation("com.squareup.retrofit2:retrofit:2.9.0") {
         exclude module: 'okhttp'
     }
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:4.9.1"
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.1"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     implementation "com.google.code.gson:gson:2.8.9"
     implementation "com.google.code.gson:gson:2.8.9"
     implementation 'com.jakewharton.timber:timber:5.0.1'
