--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.2'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath 'io.mockk:mockk:1.12.4'
     }
 }
 
@@ -17,6 +18,18 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
+}
+
+ext {
+    timberVer = "5.0.1"
+    gsonVer = "2.8.9"
+    okhttploginterceptor = "5.0.0-alpha.2"
+    okhttpurlconnection = "4.9.1"
+    okhttp = "5.0.0-alpha.2"
+    retrofitconverter = "converter-gson:2.9.0"
+    retrofit = "retrofit:2.9.0"
+    hiltandroidcompiler = "hilt-android-compiler:2.38.1"
+    hiltandroid = "hilt-android:2.38.1"
 }
 
 task clean(type: Delete) {
