--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        // Specifies the application ID for the APK.
         applicationId "com.assignment.weatherinfoapp"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
-        // Specifies the fully-qualified class name of the test instrumentation runner.
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -43,6 +41,18 @@ android {
     android{
         testOptions {
             unitTests.returnDefaultValues = true
+        }
+    }
+}
+
+android.applicationVariants.all { variant ->
+    variant.outputs.all {
+        outputFileName = "WeatherApp";
+        outputFileName += "-v" + android.defaultConfig.versionName;
+        if (variant.buildType.name == "release") {
+            outputFileName += ".apk";
+        } else {
+            outputFileName += "-SNAPSHOT.apk";
         }
     }
 }
