--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 
 ext {
     timberVer = "5.0.1"
-    gsonVer = "2.8.9"
+    gsonVer = "2.9.0"
     okhttploginterceptor = "5.0.0-alpha.2"
     okhttpurlconnection = "4.9.1"
     okhttp = "5.0.0-alpha.2"
@@ -30,6 +30,14 @@ ext {
     retrofit = "retrofit:2.9.0"
     hiltandroidcompiler = "hilt-android-compiler:2.38.1"
     hiltandroid = "hilt-android:2.38.1"
+    room_version = '2.4.2'
+    mockk = '1.12.3'
+    core_testing = '2.1.0'
+    kotlinx_coroutines = '1.6.1'
+    okhttp3 = '5.0.0-alpha.2'
+    okhttp_urlconnection = '4.9.1'
+    kotlinx_coroutines_android = '1.6.2'
+    kotlin_coroutines_adapter = '0.9.2'
 }
 
 task clean(type: Delete) {
