--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,10 @@ dependencies {
     implementation "com.google.code.gson:gson:${rootProject.ext.gsonVer}"
     implementation "com.jakewharton.timber:timber:${rootProject.ext.timberVer}"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    testImplementation 'io.mockk:mockk:1.12.3'
-    androidTestImplementation "io.mockk:mockk-android:1.12.3"
-    implementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+    testImplementation "io.mockk:mockk:${rootProject.ext.mockk}"
+    androidTestImplementation "io.mockk:mockk-android:${rootProject.ext.mockk}"
+    implementation "androidx.arch.core:core-testing:${rootProject.ext.core_testing}"
+    testImplementation "androidx.arch.core:core-testing:${rootProject.ext.core_testing}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${rootProject.ext.kotlinx_coroutines}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${rootProject.ext.kotlinx_coroutines}"
 }
