review fix. - Ver 1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ android {
             unitTests.returnDefaultValues = true
         }
     }
+    buildFeatures{
+        dataBinding=true
+    }
 }
 
 android.applicationVariants.all { variant ->
