--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,4 +13,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2"
     implementation 'androidx.annotation:annotation:1.4.0'
+    testImplementation "io.mockk:mockk:1.12.4"
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.4"
+    implementation "com.google.code.gson:gson:${rootProject.ext.gsonVer}"
+    implementation "androidx.arch.core:core-testing:${rootProject.ext.core_testing}"
+    testImplementation "androidx.arch.core:core-testing:${rootProject.ext.core_testing}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${rootProject.ext.kotlinx_coroutines}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${rootProject.ext.kotlinx_coroutines}"
 }
